clang/test/BSC/Negative/Trait/trait_return/trait_return_empty_not_defined.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait T *foo() { // expected-error {{'_Trait T' must be defined before it can be used}}
    return;
}
